[package]
name = "bitcoin-lightning-nodes"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
sqlx = { version = "0.8", features = ["runtime-tokio", "mysql", "macros"] }
dotenvy = "0.15.7"
tokio = "1.40.0"
reqwest = { version = "0.12.7", features = ["json"] }
chrono = "0.4.38"
